# DiscordGPT

./: Discord.db  keep_alive.py  main.py  pyproject.toml
cogs/: premium.py  rugpt.py
